feat: added graph

--- a/posts/writing/00.md
+++ b/posts/writing/00.md
@@ -3,7 +3,8 @@ image_path: "/images/writing_images/trascendenza.png"
 title: Trascendenza
 date: 2024-10-10
 description: Poetry 00
-project_link: none 
+project_link: none
+tags: ["poetry", "writing"]
 ---
 
 # Trascendenza - 00
